# TinyStreamAPI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  setup_project_debug.bat  setup_project_release.bat  vcpkg.json
backend/: CMakeLists.txt
backend/application/: CMakeLists.txt  main.cpp
backend/application/controllers/: TestController.cc  TestController.h
backend/res/: config.json
backend/tests/: Application_UnitTest.cpp  CMakeLists.txt
cmake/: clang_format.cmake  compiler_option_config.cmake  package_config.cmake
docs/: project_structure.txt
scripts/linux/: clean_project.sh  export_project.sh  setup_project_debug.sh  setup_project_release.sh
scripts/windows/: build_project.bat  clean_project.bat  export_project.bat  package_project.bat  setup_project_debug.bat  setup_project_release.bat
sources/: CMakeLists.txt  config.json  main.cpp
src/: CMakeLists.txt  main.cpp
src/Controller/: TestController.cc  TestController.h
tests/: Application_UnitTest.cpp  CMakeLists.txt
